# rust-embedded-environment

./: Dockerfile  README.md  docker-compose.yml
.src/: entrypoint.sh  mcu_families.sup  requirements.apt  requirements.pip
.src/setup-scripts/: add_rust_targets.sh  install_pkgs.sh  parse_pkgs_from_file.sh
.src/util-files/: mcu_config_schema.json
.src/util-files/dual-core/: cargo-generate.toml
.src/util-files/dual-core/template/: Cargo.toml  Makefile.toml
.src/util-files/dual-core/template/.cargo/: config.toml
.src/util-files/dual-core/template/{{ core_0 }}/: Cargo.toml  Makefile.toml  build.rs  memory.x
.src/util-files/dual-core/template/{{ core_0 }}/.cargo/: config.toml
.src/util-files/dual-core/template/{{ core_0 }}/src/: main.rs
.src/util-files/dual-core/template/{{ core_1 }}/: Cargo.toml  Makefile.toml  build.rs  memory.x  openocd.cfg
.src/util-files/dual-core/template/{{ core_1 }}/.cargo/: config.toml
.src/util-files/dual-core/template/{{ core_1 }}/src/: main.rs
.src/util-files/single-core/: cargo-generate.toml
.src/util-files/single-core/template/: Cargo.toml  Makefile.toml  build.rs  memory.x  openocd.cfg
.src/util-files/single-core/template/.cargo/: config.toml
.src/util-files/single-core/template/shared/greeter/src/: lib.rs
.src/util-files/single-core/template/src/: main.rs
.src/utils/build_size/: build_size.sh
.src/utils/compile-project/: compile_project.sh
.src/utils/create-project/: create_project.sh  create_project_from_config.sh  flatten_yaml.sh  get_chip_name_for_embed_toml.sh  modify_memory_x.sh
.src/utils/validate-mcu-config-schema/: validate.sh  validate_json.sh  validate_yaml.sh
mcu-configs/: stm32f411re.yml  stm32h755.yml  stm32wl55jc.yml
