[package]
name = "{{ core_0 }}"
version = "0.1.0"
authors = ["{{ authors }}"]
description = "Single core project for {{ target }}"
build = "build.rs"

# Dependencis for bare metal dev
[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3" # un-comment to enable semihosting
rtt-target = "0.5.0"
panic-halt = "0.2.0"


### {{ core_0 }} bin config
[[bin]]
name = "{{ core_0 }}"
path = "src/main.rs"

### Debug build config
[profile.dev]
opt-level = 0  # No optimizations, full debug info

### Release build config
[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
