[package]
name = "{{ core_0 }}"
version.workspace = true
authors.workspace = true
description.workspace = true
build = "build.rs"

# Dependencis for bare metal dev
[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true 
panic-halt.workspace = true 
cortex-m-semihosting.workspace = true #un-comment to enable semihosting
greeter.workspace = true
rtt-target.workspace = true

### {{ core_0 }} bin config
[[bin]]
name = "{{ core_0 }}"
path = "src/main.rs"
