[package]
name = "{{ core_1 }}"
version.workspace = true
authors.workspace = true
description.workspace = true
build = "build.rs"

# Dependencis for bare metal dev
[dependencies]
cortex-m.workspace = true 
cortex-m-rt.workspace = true 
cortex-m-semihosting.workspace = true #un-comment to enable semihosting
rtt-target.workspace = true
panic-halt.workspace = true 

### {{ core_1 }} bin config
[[bin]]
name = "{{ core_1 }}"
path = "src/main.rs"

